fixed spacing

--- a/Newsfeed/styles2.css
+++ b/Newsfeed/styles2.css
@@ -1,12 +1,12 @@
 #wrapper{
-    height:900px;
+    
 	background-color:#ecf2f9;
 	padding-bottom:30px;
     padding:10px;
 
 			
 }
-.article{
+.title{
     font-size: 15px;
     font-weight:bold;
     color:darkblue;
@@ -21,12 +21,14 @@ body {
 }
 
 #postsbox {
+    background-color:#ecf2f9;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-content: space-around;
-    height: 100%;
+    height: auto;
+    overflow: hidden;
 }
 
 .rcorners{
@@ -35,7 +37,7 @@ body {
     color: rgb(0, 0, 0);
     
     border-radius:10px;
-    
+    margin: 10px;
     font-size:20px;
 }
 
@@ -50,106 +52,7 @@ body {
     height: auto;
 }
 
-.rcorners1 {
-    width:279px;
-    background-color:#fff;
-    color: rgb(0, 0, 0);
-    display:block;
-    border-radius:10px;
-    overflow:hidden;
-    font-size:20px;
-    position: absolute;
-    left: 34px;
-}
-.rcorners2 {
-    width:279px;
-    background-color:#fff;
-    color: rgb(0, 0, 0);
-    display:block;
-    border-radius:10px;
-    overflow:hidden;
-    font-size:20px;
-    position: absolute;
-    left: 345px;
-}
 
-.rcorners3 {
-    width:279px;
-    background-color:#fff;
-    color: rgb(0, 0, 0);
-    display:block;
-    border-radius:10px;
-    overflow:hidden;
-    font-size:20px;
-    position: absolute;
-    left: 655px;
-}
-
-.rcorners4 {
-    width:279px;
-    background-color:#fff;
-    color: rgb(0, 0, 0);
-    display:block;
-    border-radius:10px;
-    overflow:hidden;
-    font-size:20px;
-    position: absolute;
-    left: 965px;
-}
-
-.rcorners5{
-    width:279px;
-    background-color:#fff;
-    color: rgb(0, 0, 0);
-    display:block;
-    border-radius:10px;
-    overflow:hidden;
-    font-size:20px; 
-    position: absolute;
-    left: 34px;
-    top: 470px;
-
-} 
-.rcorners6{
-    width:279px;
-    background-color:#fff;
-    color: rgb(0, 0, 0);
-    display:block;
-    border-radius:10px;
-    overflow:hidden;
-    font-size:20px;
-    position: absolute;
-    left: 345px;
-    top: 470px;
-
-} 
-.rcorners7{
-    width:279px;
-    background-color:#fff;
-    color: rgb(0, 0, 0);
-    display:block;
-    border-radius:10px;
-    overflow:hidden;
-    font-size:20px;
-    position: absolute;
-    left: 655px;
-    top: 470px;
-
-
-} 
-.rcorners8{
-    width:279px;
-    background-color:#fff;
-    color: rgb(0, 0, 0);
-    display:block;
-    border-radius:10px;
-    overflow:hidden;
-    font-size:20px;
-    position: absolute;
-    left: 965px;
-    top: 470px;
-
-}
 
 
 
